--- a/HORIOKART_MainControlSystem/HORIOKART_MainControlSystem/HORIOKART_MainControlSystem.vcxproj.filters
+++ b/HORIOKART_MainControlSystem/HORIOKART_MainControlSystem/HORIOKART_MainControlSystem.vcxproj.filters
@@ -32,5 +32,11 @@
     <ClCompile Include="main.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="DetectObstacle.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="detectLoadEdge.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
