--- a/HORIOKART_MainControlSystem/HORIOKART_MainControlSystem/HORIOKART_MainControlSystem.vcxproj
+++ b/HORIOKART_MainControlSystem/HORIOKART_MainControlSystem/HORIOKART_MainControlSystem.vcxproj
@@ -86,6 +86,8 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="detectLoadEdge.cpp" />
+    <ClCompile Include="DetectObstacle.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
