--- a/HORIOKART_MainControlSystem/HORIOKART_MainControlSystem/HORIOKART_MainControlSystem.vcxproj.filters
+++ b/HORIOKART_MainControlSystem/HORIOKART_MainControlSystem/HORIOKART_MainControlSystem.vcxproj.filters
@@ -38,5 +38,8 @@
     <ClCompile Include="detectLoadEdge.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="RecieveEuler.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
