--- a/HORIOKART_MainControlSystem/HORIOKART_MainControlSystem/HORIOKART_MainControlSystem.vcxproj
+++ b/HORIOKART_MainControlSystem/HORIOKART_MainControlSystem/HORIOKART_MainControlSystem.vcxproj
@@ -86,10 +86,13 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="CorrectTilt.cpp" />
     <ClCompile Include="detectLoadEdge.cpp" />
     <ClCompile Include="DetectObstacle.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="RecieveEuler.cpp" />
+    <ClCompile Include="RecieveEuler.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+    </ClCompile>
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
